<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="73dp">

    <Button
        android:id="@+id/level1"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="98dp"
        android:text="@string/guess_the_country"

        app:layout_constraintBottom_toTopOf="@+id/level2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/level2"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/guess_hints"
        app:layout_constraintBottom_toTopOf="@+id/level3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level1" />

    <Button
        android:id="@+id/level3"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        android:text="@string/guess_the_flag"
        app:layout_constraintBottom_toTopOf="@+id/level4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level2" />

    <Button
        android:id="@+id/level4"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginBottom="245dp"
        android:text="@string/advanced_level"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level3" />

    <Switch
        android:id="@+id/timerSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/timer_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level4"
        app:layout_constraintVertical_bias="0.288" />
</android.support.constraint.ConstraintLayout>