<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Level1Activity"
    tools:layout_editor_absoluteY="73dp">

    <ImageView
        android:id="@+id/imgLvl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@color/colorBackgroundDark"
        android:contentDescription="@string/lvl_1_random_flag"
        android:padding="2dp"
        android:src="@drawable/_do"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerLvl1"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="212dp"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLvl1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLvl1"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:onClick="btn1OnClick"
        android:text="@string/submitBtnLvl1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"


        />



    <TextView
        android:id="@+id/textViewLvl1"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginBottom="89dp"
        android:text="@string/space"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLvl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toBottomOf="@+id/spinnerLvl1"
        app:layout_constraintVertical_bias="0.776"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/lvl1Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_10"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/imgLvl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>